Improve RGB range segmentation, boundary overlay, storage/tests cleanup